[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tamingnifty"
version = "1.0.5"
description = "A library for converting OHLC to Noiseless Charts (Renko and PNF)"
authors = [{ name="Sugam Gupta", email="sugam192@gmail.com" }]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "pymongo",
    "requests",
    "pandas",
    "slack_sdk",
    "python-dotenv"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tamingnifty*"]